# tld_remedy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: bgm.json  session.data  troops.json
data/maps/: db_01.tmj  db_02.tmj  db_03.tmj  db_04.tmj  db_05.tmj  db_06.tmj  db_07.tmj  db_08.tmj  rem_01.tmj  rem_02.tmj  rem_03.tmj  rem_04.tmj  rem_05.tmj  rem_06.tmj  rem_07.tmj  rem_08.tmj  rem_09.tmj  rem_10.tmj  rem_11.tmj  rem_12.tmj  rem_13.tmj  rem_14.tmj  rem_15.tmj  rem_16.tmj  rem_17.tmj
data/sfx/: combat.json  erwin.json  field.json  knife.json  menu.json
data/spritesheets/: camp_menu.json  combat_portraits.json  dummy.json  emote_balloons.json  enemy_actor.json  erwin_actor.json  erwin_bust.json  erwin_combatant.json  hud_combo.json  hud_command.json  hud_enemy.json  hud_life.json  hud_party.json  hud_toasts.json  item_portraits.json  mary_actor.json  mary_bust.json  mary_combatant.json  menu_elements.json  pickup_entity.json  portraits.json  rest_menu.json  savepoint_entity.json  servant_combatant.json  status_icons.json  status_icons_mini.json
deprecated/data/spritesheets/: hud_life.json
include/: enums.h  game.h
include/actors/: player.h
include/base/: actor.h  combat_action.h  combatant.h  enemy.h  entity.h  field_sequence.h  panel.h  party_member.h  scene.h  status_effect.h  sub_weapon.h
include/combat/actions/: 3rd_party.h  attack.h  evade.h  ghost_step.h  knife_cleave.h  knife_piercer.h  provoke.h  use_item.h
include/combat/combatants/: nme_dummy.h  player.h
include/combat/combatants/enemy/: dummy.h  servant.h
include/combat/combatants/party/: erwin.h  mary.h
include/combat/entities/: afterimage.h  dmg_number.h  status_text.h
include/combat/hud/: blackbars.h  cmd_assist.h  cmd_item.h  cmd_plr.h  combo.h  enemy.h  hud_combo.h  life.h  toasts.h
include/combat/status_effects/: broken.h  broken_arm.h  crippled_arm.h  crippled_leg.h  despondent.h  endurance.h  mangled.h  mending.h  refreshed.h
include/combat/sub_weapons/: knife.h
include/combat/system/: camera.h  cbt_handler.h  evt_handler.h  stage.h
include/data/: actor.h  actor_event.h  ai_behavior.h  ai_parameters.h  animation.h  combat_event.h  combatant_event.h  damage.h  debug.h  enemy_troops.h  entity.h  field_event.h  keybinds.h  line.h  personal.h  rect_ex.h  session.h  technique.h
include/entities/: map_trans.h
include/field/actors/: companion.h  enemy.h  player.h
include/field/entities/: map_trans.h  pickup.h  save_point.h
include/field/sequences/: db_01.h  db_02.h  ds_erwin_mild.h  ds_erwin_severe.h  incap.h  reject.h  rest.h  save.h
include/field/system/: actor_handler.h  camera.h  field_commands.h  field_handler.h  field_map.h
include/menu/hud/: party.h  portrait.h  reticle.h
include/menu/panels/: config.h  confirm.h  crafting.h  diagnose.h  dialog.h  items.h  remap.h  status.h  tech.h
include/scenes/: camp_menu.h  combat.h  debug_field.h  field.h  game_over.h  rest_menu.h  title.h
include/system/: field_commands.h  field_handler.h  field_map.h  music_player.h  noise_effect.h  sound_atlas.h  sprite_atlas.h
include/utils/: animation.h  camera.h  collision.h  comparisons.h  flag.h  input.h  items.h  math.h  menu.h  text.h
src/: game.cpp  main.cpp
src/actors/: player.cpp
src/base/: actor.cpp  combat_action.cpp  combatant.cpp  enemy.cpp  entity.cpp  field_sequence.cpp  panel.cpp  party_member.cpp  status_effect.cpp  sub_weapon.cpp
src/combat/actions/: 3rd_party.cpp  attack.cpp  evade.cpp  ghost_step.cpp  knife_cleave.cpp  knife_piercer.cpp  provoke.cpp  use_item.cpp
src/combat/combatants/: nme_dummy.cpp  player.cpp
src/combat/combatants/enemy/: dummy.cpp  servant.cpp
src/combat/combatants/party/: erwin.cpp  mary.cpp
src/combat/entities/: afterimage.cpp  dmg_number.cpp  status_text.cpp
src/combat/hud/: blackbars.cpp  cmd_assist.cpp  cmd_item.cpp  cmd_plr.cpp  combo.cpp  enemy.cpp  hud_combo.cpp  life.cpp  toasts.cpp
src/combat/status_effects/: broken.cpp  broken_arm.cpp  crippled_arm.cpp  crippled_leg.cpp  despondent.cpp  endurance.cpp  mangled.cpp  mending.cpp  refreshed.cpp
src/combat/sub_weapons/: knife.cpp
src/combat/system/: camera.cpp  cbt_handler.cpp  evt_handler.cpp  stage.cpp
src/entities/: map_trans.cpp
src/field/actors/: companion.cpp  enemy.cpp  player.cpp
src/field/entities/: map_trans.cpp  pickup.cpp  save_point.cpp
src/field/sequences/: db_01.cpp  db_02.cpp  ds_erwin_mild.cpp  ds_erwin_severe.cpp  incap.cpp  reject.cpp  rest.cpp  save.cpp
src/field/system/: actor_handler.cpp  camera.cpp  field_commands.cpp  field_handler.cpp  field_map.cpp
src/menu/hud/: party.cpp  portrait.cpp  reticle.cpp
src/menu/panels/: config.cpp  confirm.cpp  crafting.cpp  diagnose.cpp  dialog.cpp  items.cpp  remap.cpp  status.cpp  tech.cpp
src/scenes/: camp_menu.cpp  combat.cpp  debug_field.cpp  field.cpp  game_over.cpp  rest_menu.cpp  title.cpp
src/system/: field_commands.cpp  field_handler.cpp  field_map.cpp  music_player.cpp  noise_effect.cpp  sound_atlas.cpp  sprite_atlas.cpp
src/utils/: animation.cpp  camera.cpp  collision.cpp  comparisons.cpp  flag.cpp  input.cpp  items.cpp  math.cpp  text.cpp
